alumnos y conceptos correccion

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_OtrasTablas.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_OtrasTablas.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebMigradorCtasPorCobrar.Models.Entities.Migracion.CuotaPago
+﻿@model WebMigradorCtasPorCobrar.Models.Entities.Migracion.ConceptoPago
 
 <div class="col-12">
     <p class="h6 mt-3">Cuota de pago @Model.Cuota_pago en cp_des</p>
