--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_DatosEstudiante.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_DatosEstudiante.cshtml
@@ -12,10 +12,10 @@
         <dd class="col-sm-8">@Model.C_CodAlu</dd>
 
         <dt class="col-sm-4">Carrera</dt>
-        <dd class="col-sm-8">@Model.C_RcCod</dd>
+        <dd class="col-sm-8">@Model.C_RcCod - @Model.T_Carrera</dd>
 
         <dt class="col-sm-4">Modalidad de ingreso</dt>
-        <dd class="col-sm-8">@Model.C_CodModIng</dd>
+        <dd class="col-sm-8">@Model.C_CodModIng - @Model.T_ModalidadIng</dd>
 
         <dt class="col-sm-4">Año de ingreso</dt>
         <dd class="col-sm-8">@Model.C_AnioIngreso</dd>
