--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_DatosMigracion.cshtml
@@ -42,7 +42,7 @@
                                                         : Html.Raw("<i class=\"fa fa-times-circle h5 text-danger\"></i>"));
         columns.Add().SetWidth(150).Css("text-right").Encoded(false).Sanitized(false)
                      .RenderValueAs(model => model.B_Migrable ? @Html.Raw("")
-                                                              : @Html.Raw($"<a href=\"{ Url.Action("Observaciones", "ConceptoPago", new { id = model.I_RowID, area = "" })}\" class=\"modal-link\">" +
+                                                              : @Html.Raw($"<a href=\"{ Url.Action("Observaciones", "ConceptoPago", new { id = model.I_RowID, area = "" })}\" class=\"modal-link-lg\">" +
                                                                               $"<i class=\"fa fa-search-plus\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Observacion</span>" +
                                                                           $"</a>"));
     }
