--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarPeriodo.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarPeriodo.cshtml
@@ -19,7 +19,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-3 col-4">
                         @Html.Label("Código Cuota", new { @class = "col-form-label", @for = "Cuota_pago" })
-                        @Html.TextBoxFor(model => model.Cuota_pago, new { @class = "form-control form-control-sm-sm", @readonly = "true" })
+                        @Html.TextBoxFor(model => model.Cuota_pago, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
                     <div class="form-group col-md-6 col-5">
                         @Html.Label("Descripción", new { @class = "col-form-label", @for = "Descripción" })
