cambios alumno editar

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_OtrasTablas.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_OtrasTablas.cshtml
@@ -14,11 +14,11 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.ConceptosPago)
+            @foreach (var item in Model.CuotasPago)
             {
                 <tr>
-                    <td>@item.Cuota_pago</td>
-                    <td>@item.Id_cp - @item.Descripcio</td>
+                    <td>@item.Id_cp</td>
+                    <td>@item.Cuota_pago - @item.Descripcio</td>
                     <td>@item.Ano</td>
                     <td>@item.P</td>
                     <td>@item.Monto</td>
