--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarEquivalencia.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarEquivalencia.cshtml
@@ -28,7 +28,7 @@
                     </div>
                     <div class="form-group col-md-3 col-3">
                         @Html.Label("Código bnc", new { @class = "col-form-label", @for = "Codigo_bnc" })
-                        @Html.TextBoxFor(model => model.Codigo_bnc, new { @class = "form-control form-control-sm", @readonly = "true" })
+                        @Html.TextBoxFor(model => model.Codigo_bnc, new { @class = "form-control form-control-sm" })
                     </div>
                 </div>
                 <div class="form-row">
