--- a/publicacion/Views/ConceptoPago/_DatosMigracion.cshtml
+++ b/publicacion/Views/ConceptoPago/_DatosMigracion.cshtml
@@ -30,16 +30,16 @@
         columns.Add(c => c.Ano).Titled("Año").Filterable(true);
         columns.Add(c => c.P).Titled("Periodo").Filterable(true);
         columns.Add(c => c.Tipo_oblig).Css("text-center").Encoded(false).Sanitized(false).Titled("Obligación").Filterable(true)
-                .RenderValueAs(model => model.Tipo_oblig ? Html.Raw("<span class=\"badge badge-pill badge-info\">Si</span>")
-                                                         : Html.Raw("<span class=\"badge badge-pill badge-secondary\">No</span>"));
+                .RenderValueAs(model => model.Tipo_oblig ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-info\"></i></span>")
+                                                         : Html.Raw("<span class=\"h5\"><i class=\"fa fa-minus-circle text-secondary\"></i></span>"));
         columns.Add(c => c.Nro_pagos).Titled("Nro Pagos").Filterable(true);
         columns.Add(c => c.Monto).Titled("Monto").Filterable(true);
         columns.Add(c => c.B_Migrable).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrable").Filterable(true)
-                .RenderValueAs(model => model.B_Migrable ? Html.Raw("<i class=\"fa fa-check-circle text-success\"></i>")
-                                                         : Html.Raw("<i class=\"fa fa-times-circle text-danger\"></i>"));
+                .RenderValueAs(model => model.B_Migrable ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
+                                                         : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
         columns.Add(c => c.B_Migrado).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrado").Filterable(true)
-                .RenderValueAs(model => model.B_Migrado ? Html.Raw("<i class=\"fa fa-check-circle h5 text-success\"></i>")
-                                                        : Html.Raw("<i class=\"fa fa-times-circle h5 text-danger\"></i>"));
+                .RenderValueAs(model => model.B_Migrado ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
+                                                        : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
         columns.Add().SetWidth(150).Css("text-right").Encoded(false).Sanitized(false)
                      .RenderValueAs(model => model.B_Migrable ? @Html.Raw("")
                                                               : @Html.Raw($"<a href=\"{ Url.Action("Observaciones", "ConceptoPago", new { id = model.I_RowID, area = "" })}\" class=\"modal-link-lg\">" +
