--- a/publicacion/Views/CuotaPago/_EditarEquivalencia.cshtml
+++ b/publicacion/Views/CuotaPago/_EditarEquivalencia.cshtml
@@ -55,7 +55,7 @@
                     </div>
                     <div class="form-group col-3">
                         @Html.Label("Periodo", new { @class = "col-form-label", @for = "I_Periodo" })
-                        @Html.TextBoxFor(model => model.I_Periodo, new { @class = "form-control form-control-sm", @readonly = "true" })
+                        @Html.DropDownListFor(model => model.I_Periodo, ViewBag.Periodos as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
                     </div>
                     <div class="form-group col-3">
                         @Html.Label("Prioridad", new { @class = "col-form-label", @for = "Prioridad" })
