--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Layout.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     @Styles.Render("~/content/datetime")
     @Styles.Render("~/content/select")
     @Styles.Render("~/content/fonts")
+    @Styles.Render("~/content/sweetalert2")
 
     @Scripts.Render("~/bundles/jquery")
     <script src="@Url.Content("~/Assets/jquery/jquery.unobtrusive-ajax.js")"></script>
@@ -110,8 +111,8 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/datetime")
     @Scripts.Render("~/bundles/select")
+    @Scripts.Render("~/bundles/sweetalert2")
     @Scripts.Render("~/bundles/app")
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
     @RenderSection("scripts", required: false)
 
