correccion más de 1 periodo

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_ProcesoMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_ProcesoMigracion.cshtml
@@ -6,7 +6,7 @@
 <div class="row my-2">
     <div class="col-md-4 py-1"><button id="btn-copy" class="btn btn-warning btn-block">1. Copiar datos desde Temporal de pagos</button></div>
     <div class="col-md-4 py-1"><button id="btn-validate" class="btn btn-info btn-block">2. Validar consistencia de datos</button></div>
-    <div class="col-md-4 py-1"><button id="btn-migrate" class="btn btn-primary btn-block">3. Migrar a Recaudacion de ingresos</button></div>
+    <div class="col-md-4 py-1"><button id="btn-migrate" class="btn btn-primary btn-block">3. Migrar a Repositorio de datos</button></div>
 </div>
 
 <div class="col-md-12 my-4">
