--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_ProcesoMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_ProcesoMigracion.cshtml
@@ -39,7 +39,7 @@
 
     $('#btn-copy').on('click', function () {
         Swal.fire({
-            title: 'Copiar Alumnos desde el temporal de pagos',
+            title: 'Copiar Obligaciones desde el temporal de pagos',
             text: "Al copiar datos desde el temporal de pagos se perderá cualquier validacion y cambio que no hayan sido migrados",
             icon: 'warning',
             showCancelButton: true,
