--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_EditarAnio.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_EditarAnio.cshtml
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="row mt-4">
-        @*@Html.Partial("_OtrasTablas", Model);*@
+        @Html.Partial("_OtrasTablas", Model);
     </div>
 </div>
 
