--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Observaciones.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Observaciones.cshtml
@@ -2,7 +2,9 @@
 
 <div class="modal-header">
     <h5 class="modal-title">
-        Observaciones: <span id="error_descrip" class="d-inline-block text-truncate1" style="font-size:1rem; vertical-align: text-bottom;"></span>
+        Observaciones: 
+        <span id="error_title" style="font-size:1rem; vertical-align: text-bottom;">@ViewBag.ErrorTitle</span> 
+        <span id="error_descrip" class="d-inline-block text-truncate1" style="font-size:1rem; vertical-align: text-bottom;"></span>
     </h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
