--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_EditarAnio.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_EditarAnio.cshtml
@@ -88,6 +88,7 @@
 
 
 <script>
+    $('#error_title').hide();
     $('#error_descrip').html('@observ_descrip');
 
     $("form").submit(function () {
@@ -96,12 +97,14 @@
         }
         else {
             $('#error_descrip').html('');
+            $('#error_title').show();
         }
     });
 
     $('#btnCancel').on('click', function () {
         $('#edit-target').hide()
         $('#tabla-errores').show()
+        $('#error_title').show();
         $('#error_descrip').html('');
     })
 
