--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarPeriodo.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarPeriodo.cshtml
@@ -89,6 +89,7 @@
 
 
 <script>
+    $('#error_title').hide();
     $('#error_descrip').html('@observ_descrip');
 
     $("#btnsubmit").on('click', function (event) {
@@ -140,12 +141,14 @@
         }
         else {
             $('#error_descrip').html('');
-        }
+            $('#error_title').show();
+       }
     });
 
     $('#btnCancel').on('click', function () {
         $('#edit-target').hide()
         $('#tabla-errores').show()
+        $('#error_title').show();
         $('#error_descrip').html('');
     })
 
