carga archivos publicación

--- a/publicacion/Views/CuotaPago/_EditarEquivalencia.cshtml
+++ b/publicacion/Views/CuotaPago/_EditarEquivalencia.cshtml
@@ -15,6 +15,7 @@
                 @Html.Hidden("submited", 0)
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(model => model.I_RowID)
+                @Html.HiddenFor(model => model.I_ProcedenciaID)
                 @Html.Hidden("tipoObserv", tipoObs)
 
                 <div class="form-row">
@@ -82,12 +83,13 @@
         </div>
     </div>
     <div class="row mt-4">
-        @Html.Partial("_OtrasTablas", Model);
+        @Html.Partial("_OtrasTablas", Model)
     </div>
 </div>
 
 
 <script>
+    $('#error_title').hide();
     $('#error_descrip').html('@observ_descrip');
 
     $("form").submit(function () {
@@ -96,12 +98,14 @@
         }
         else {
             $('#error_descrip').html('');
+            $('#error_title').show();
         }
     });
 
     $('#btnCancel').on('click', function () {
         $('#edit-target').hide()
         $('#tabla-errores').show()
+        $('#error_title').show();
         $('#error_descrip').html('');
     })
 
