--- a/publicacion/Views/Shared/_Observaciones.cshtml
+++ b/publicacion/Views/Shared/_Observaciones.cshtml
@@ -2,7 +2,9 @@
 
 <div class="modal-header">
     <h5 class="modal-title">
-        Observaciones: <span id="error_descrip" class="d-inline-block text-truncate1" style="font-size:1rem; vertical-align: text-bottom;"></span>
+        Observaciones: 
+        <span id="error_title" style="font-size:1rem; vertical-align: text-bottom;">@ViewBag.ErrorTitle</span> 
+        <span id="error_descrip" class="d-inline-block text-truncate1" style="font-size:1rem; vertical-align: text-bottom;"></span>
     </h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
@@ -17,6 +19,7 @@
                         <th>Tipo</th>
                         <th>Descripción</th>
                         <th>Fec. Registro</th>
+                        <th>Estado</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -27,8 +30,21 @@
                             <td style="min-width:100px">@item.T_ObservCod</td>
                             <td style="width:450px">@item.T_ObservDesc</td>
                             <td style="width:180px">@item.D_FecRegistro</td>
-                            <td style="width:90px" class="text-right">
-                                <a class="link-editar" href="javascript:;" data-url="@Url.Action("Editar",ViewBag.Controller, new { id = item.I_FilaTablaID, obsID = item.I_ObservID })"><i class="fa fa-pencil-square-o"></i> Corregir</a>
+                            <td style="width:90px">
+                                @if (item.B_Resuelto)
+                                {
+                                    <span class="badge badge-pill badge-success"><i class="fa fa-check-circle"></i> Corregido</span>
+                                }
+                                else
+                                {
+                                    <span class="badge badge-pill badge-warning"><i class="fa fa-exclamation-circle"></i> Pendiente</span>
+                                }
+                            </td>
+                            <td style="width:120px" class="text-right">
+                                @if (!item.B_Resuelto)
+                                {
+                                    <a class="link-editar" href="javascript:;" data-url="@Url.Action("Editar",ViewBag.Controller, new { id = item.I_FilaTablaID, obsID = item.I_ObservID })"><i class="fa fa-pencil-square-o"></i> Corregir</a>
+                                }
                             </td>
                         </tr>
                     }
