--- a/publicacion/Views/ConceptoPago/_DatosMigracion.cshtml
+++ b/publicacion/Views/ConceptoPago/_DatosMigracion.cshtml
@@ -25,10 +25,10 @@
     @Html.Grid(Model).Columns(columns =>
     {
         columns.Add(c => c.Id_cp).Titled("Codigo").Filterable(true);
-        columns.Add(c => c.Cuota_pago).Titled("Cuota pago").Filterable(true);
         columns.Add(c => c.Descripcio).Titled("Descripción").Filterable(true);
         columns.Add(c => c.Ano).Titled("Año").Filterable(true);
         columns.Add(c => c.P).Titled("Periodo").Filterable(true);
+        columns.Add(c => c.Cuota_pago_desc).Titled("Cuota pago").Filterable(true);
         columns.Add(c => c.Tipo_oblig).Css("text-center").Encoded(false).Sanitized(false).Titled("Obligación").Filterable(true)
                 .RenderValueAs(model => model.Tipo_oblig ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-info\"></i></span>")
                                                          : Html.Raw("<span class=\"h5\"><i class=\"fa fa-minus-circle text-secondary\"></i></span>"));
@@ -43,7 +43,7 @@
         columns.Add().SetWidth(150).Css("text-right").Encoded(false).Sanitized(false)
                      .RenderValueAs(model => model.B_Migrable ? @Html.Raw("")
                                                               : @Html.Raw($"<a href=\"{ Url.Action("Observaciones", "ConceptoPago", new { id = model.I_RowID, area = "" })}\" class=\"modal-link-lg\">" +
-                                                                              $"<i class=\"fa fa-search-plus\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Observacion</span>" +
+                                                                              $"<i class=\"fa fa-search-plus\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Observaciones</span>" +
                                                                           $"</a>"));
     }
     ).WithPaging(20).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
