--- a/publicacion/Views/ConceptoPago/_EditarAnio.cshtml
+++ b/publicacion/Views/ConceptoPago/_EditarAnio.cshtml
@@ -82,12 +82,13 @@
         </div>
     </div>
     <div class="row mt-4">
-        @*@Html.Partial("_OtrasTablas", Model);*@
+        @Html.Partial("_OtrasTablas", Model)
     </div>
 </div>
 
 
 <script>
+    $('#error_title').hide();
     $('#error_descrip').html('@observ_descrip');
 
     $("form").submit(function () {
@@ -96,12 +97,14 @@
         }
         else {
             $('#error_descrip').html('');
+            $('#error_title').show();
         }
     });
 
     $('#btnCancel').on('click', function () {
         $('#edit-target').hide()
         $('#tabla-errores').show()
+        $('#error_title').show();
         $('#error_descrip').html('');
     })
 
