--- a/publicacion/Views/CuotaPago/_EditarPeriodo.cshtml
+++ b/publicacion/Views/CuotaPago/_EditarPeriodo.cshtml
@@ -9,11 +9,13 @@
 <div class="col-12">
     <div class="row">
         <div class="col-12">
-            @using (Ajax.BeginForm("Save", "CuotaPago", new { area = "" }, new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "div_msg", OnBegin = "Load", OnSuccess = "Submited", OnComplete = "Stop" }))
+            @*@using (Ajax.BeginForm("Save", "CuotaPago", new { area = "" }, new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "div_msg", OnBegin = "Load", OnSuccess = "Submited", OnComplete = "Stop" }))*@
+            @using (Html.BeginForm("Save", "CuotaPago", new { area = "" }, FormMethod.Post, new { id = "form_cpdes" }))
             {
                 @Html.Hidden("submited", 0)
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(model => model.I_RowID)
+                @Html.HiddenFor(model => model.I_ProcedenciaID)
                 @Html.Hidden("tipoObserv", tipoObs)
 
                 <div class="form-row">
@@ -62,7 +64,7 @@
                     </div>
                     <div class="form-group col-3">
                         @Html.Label("Procedencia", new { @class = "col-form-label" })
-                        @Html.DropDownListFor(model => model.I_ProcedenciaID, ViewBag.Procedencia as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
+                        @Html.DropDownList("cbo_proecdencia", ViewBag.Procedencia as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
                     </div>
                 </div>
 
@@ -81,13 +83,57 @@
         </div>
     </div>
     <div class="row mt-4">
-        @Html.Partial("_OtrasTablas", Model);
+        @Html.Partial("_OtrasTablas", Model)
     </div>
 </div>
 
 
 <script>
+    $('#error_title').hide();
     $('#error_descrip').html('@observ_descrip');
+
+    $("#btnsubmit").on('click', function (event) {
+        event.preventDefault();
+        var form = $('#form_cpdes');
+        Swal.fire({
+            title: "¡Atención, posible incosistencia!",
+            text: "Se ha identificado que la cuota de pago se encuentra asociada a más de un periodo.\n" +
+                  "Al guardar, el periodo tomará el valor seleccionado y deberá corregir las cuotas de pago en los  concepto de pago y obligaciones relacionados.",
+            type: "warning",
+            showCancelButton: true,
+            confirmButtonColor: '#ff830f',
+            cancelButtonColor: '#3c3c3c',
+            confirmButtonText: "Sí, guardar cambios",
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $.ajax({
+                    url: form[0].action,
+                    type: 'POST',
+                    data: form.serialize(),
+                    cache: false,
+                    beforeSend: function () {
+                        Load();
+                    },
+                    success: function (data) {
+                        Submited();
+                        $('#div_msg').html(data);
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) {
+                        $('#form_cpdes').append(`<div class="col-12">
+                                                    <div id="div-alert" class="mt-3">
+                                                        <div class="text-center alert alert-danger">
+                                                            <i class="fa fa-times">&nbsp;</i>${jqXHR.responseText}
+                                                        </div>
+                                                    </div>
+                                                </div>`);
+                    },
+                    complete: function () {
+                        $('#loading').hide();
+                    }
+                })
+            };
+        });
+    });
 
     $("form").submit(function () {
         if (parseInt($("#submited").val()) > 0) {
@@ -95,12 +141,14 @@
         }
         else {
             $('#error_descrip').html('');
-        }
+            $('#error_title').show();
+       }
     });
 
     $('#btnCancel').on('click', function () {
         $('#edit-target').hide()
         $('#tabla-errores').show()
+        $('#error_title').show();
         $('#error_descrip').html('');
     })
 
